// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lerna run my-script --parallel: stderr 1`] = `
lerna info version __TEST_VERSION__
lerna info run in 2 package(s): npm run my-script --silent
lerna success run Ran npm script 'my-script' in packages:
lerna success - package-1
lerna success - package-3
`;

exports[`lerna run my-script --scope: stderr 1`] = `
lerna info version __TEST_VERSION__
lerna info filter [ 'package-1' ]
lerna success run Ran npm script 'my-script' in packages:
lerna success - package-1
`;

exports[`lerna run test --ignore: stderr 1`] = `
lerna info version __TEST_VERSION__
lerna info filter [ '!package-@(1|2|3)' ]
lerna success run Ran npm script 'test' in packages:
lerna success - package-4
`;

exports[`lerna run test --parallel: stderr 1`] = `
lerna info version __TEST_VERSION__
lerna info run in 4 package(s): npm run test --silent
lerna success run Ran npm script 'test' in packages:
lerna success - package-1
lerna success - package-2
lerna success - package-3
lerna success - package-4
`;

exports[`lerna run test --stream: stderr 1`] = `
lerna info version __TEST_VERSION__
lerna success run Ran npm script 'test' in packages:
lerna success - package-1
lerna success - package-2
lerna success - package-3
lerna success - package-4
`;

exports[`lerna run test --stream: stdout 1`] = `
package-3: package-3
package-4: package-4
package-1: package-1
package-2: package-2
`;
